<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/grey_H"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_fragment_symptoms_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/chk_fever" />

    <ImageView
        android:id="@+id/iv_question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tv_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/img_symptoms" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <CheckBox
        android:id="@+id/chk_fever"
        style="@style/CheckboxSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/question_fragment_symptoms_fever"
        app:layout_constraintBottom_toTopOf="@+id/chk_cough"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_progress" />

    <CheckBox
        android:id="@+id/chk_headache"
        style="@style/CheckboxSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/question_fragment_symptoms_headache"
        app:layout_constraintBottom_toBottomOf="@+id/chk_fever"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chk_fever"
        app:layout_constraintTop_toTopOf="@+id/chk_fever" />

    <CheckBox
        android:id="@+id/chk_runny_nose"
        style="@style/CheckboxSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/question_fragment_symptoms_runny_nose"
        app:layout_constraintBottom_toBottomOf="@+id/chk_headache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chk_headache"
        app:layout_constraintTop_toTopOf="@+id/chk_headache" />

    <CheckBox
        android:id="@+id/chk_cough"
        style="@style/CheckboxSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/question_fragment_symptoms_cough"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/chk_fever"
        app:layout_constraintTop_toBottomOf="@+id/chk_fever" />

    <CheckBox
        android:id="@+id/chk_sore_throat"
        style="@style/CheckboxSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/question_fragment_symptoms_sore_throat"
        app:layout_constraintEnd_toStartOf="@+id/chk_red_eyes"
        app:layout_constraintStart_toEndOf="@+id/chk_cough"
        app:layout_constraintTop_toTopOf="@+id/chk_cough" />

    <CheckBox
        android:id="@+id/chk_red_eyes"
        style="@style/CheckboxSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/question_fragment_symptoms_red_eyes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/chk_runny_nose"
        app:layout_constraintTop_toTopOf="@+id/chk_sore_throat" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

</androidx.constraintlayout.widget.ConstraintLayout><!--        android:tickMark="@drawable/seekbar_tick"-->