<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/what_your_temperature_name"
        android:textColor="@color/grey_D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_value_name"
        android:textColor="@color/grey_D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sb_temperature_wrapper"
        app:layout_constraintEnd_toStartOf="@+id/sb_temperature_wrapper"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintRight_toLeftOf="@id/sb_temperature_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sb_temperature_wrapper"
        app:layout_constraintVertical_bias="0.506" />

    <FrameLayout
        android:id="@+id/sb_temperature_wrapper"
        android:layout_width="78dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:layout_constraintBottom_toTopOf="@id/tv_progress"
        android:background="@drawable/thermometer_background">
        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="16dp">
            <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                android:id="@+id/sb_temperature"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:splitTrack="false"
                android:thumb="@drawable/temperature_thumb"
                android:progressDrawable="@drawable/temperature_seekbar_progress"
                android:progressBackgroundTint="#e0e0e0"
                app:seekBarRotation="CW270" /> <!-- Rotation: CW90 or CW270 -->
        </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
    </FrameLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_name"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout><!--        android:tickMark="@drawable/seekbar_tick"-->